5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1593_820.log
== SUBMITION (2019-03-24 21:47:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- EXECUTION TIME:
0.179852
-- ERROR:
  File "/home/codebench/codes/1593/820/main.py", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:47:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:10:04) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- EXECUTION TIME:
0.124037
-- ERROR:
  File "/home/codebench/codes/1593/820/main.py", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:10:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:10:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.148615
-- ERROR:
  File "/home/codebench/codes/1593/820/main.py", line 8
    valor // 50 = notas_R50
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 15:10:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.14898
-- ERROR:
  File "/home/codebench/codes/1593/820/main.py", line 8
    valor // 50 = notas_R50
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:10:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 15:10:46) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 16:08:11) 
-- CODE:
vl = int(input("Quanto deseja sacar:"))
vl50 = vl50//vl
rt50 = vl%50
vl10 = rt50%10
vl2 = rt10%2
print(rt50)
print(vl10)
print(vl12)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vl50 = vl50//vl
NameError: name 'vl50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 16:08:32) 
-- CODE:
vl = int(input("Quanto deseja sacar:"))
vl50 = vl50//vl
rt50 = vl%50
vl10 = rt50%10
vl2 = rt10%2
print(rt50)
print(vl10)
print(vl12)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vl50 = vl50//vl
NameError: name 'vl50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 16:08:48) 
-- CODE:
vl = int(input("Quanto deseja sacar:"))
vl50 = vl//vl
rt50 = vl%50
vl10 = rt50%10
vl2 = rt10%2
print(rt50)
print(vl10)
print(vl12)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    vl2 = rt10%2
NameError: name 'rt10' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 16:09:09) 
-- CODE:
vl = int(input("Quanto deseja sacar:"))
vl50 = vl//50
rt50 = vl%50
vl10 = rt50%10
vl2 = vl10%2
print(rt50)
print(vl10)
print(vl12)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(vl12)
NameError: name 'vl12' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 16:09:22) 
-- CODE:
vl = int(input("Quanto deseja sacar:"))
vl50 = vl//50
rt50 = vl%50
vl10 = rt50%10
vl2 = vl10%2
print(rt50)
print(vl10)
print(vl2)
-- OUTPUT:
28
8
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 16:09:22) 
-- CODE:
vl = int(input("Quanto deseja sacar:"))
vl50 = vl//50
rt50 = vl%50
vl10 = rt50%10
vl2 = vl10%2
print(rt50)
print(vl10)
print(vl2)
-- OUTPUT:
28
8
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 16:09:23) 
-- CODE:
vl = int(input("Quanto deseja sacar:"))
vl50 = vl//50
rt50 = vl%50
vl10 = rt50%10
vl2 = vl10%2
print(rt50)
print(vl10)
print(vl2)
-- OUTPUT:
28
8
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 16:09:56) 
-- CODE:
vl = int(input("Quanto deseja sacar:"))
vl50 = vl//50
rt50 = vl%50
vl10 = rt50%10
vl2 = vl10%2
print(vl50)
print(vl10)
print(vl2)
-- OUTPUT:
40
8
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 16:10:48) 
-- CODE:
vl = int(input("Quanto deseja sacar:"))
vl50 = vl//50
rt50 = vl%50
vl10 = rt50%10
rt10 = rt50%10
vl2 = rt10%2
print(vl50)
print(vl10)
print(vl2)
-- OUTPUT:
40
8
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 16:11:20) 
-- CODE:
vl = int(input("Quanto deseja sacar:"))
vl50 = vl//50
rt50 = vl%50
vl10 = rt50//10
rt10 = rt50%10
vl2 = rt10%2
print(vl50)
print(vl10)
print(vl2)
-- EXECUTION TIME:
0.150795
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 16:11:21) 
-- CODE:
vl = int(input("Quanto deseja sacar:"))
vl50 = vl//50
rt50 = vl%50
vl10 = rt50//10
rt10 = rt50%10
vl2 = rt10%2
print(vl50)
print(vl10)
print(vl2)
-- OUTPUT:
40
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 16:11:46) 
-- CODE:
vl = int(input("Quanto deseja sacar:"))
vl50 = vl//50
rt50 = vl%50
vl10 = rt50//10
rt10 = rt50%10
vl2 = rt10//2
print(vl50)
print(vl10)
print(vl2)
-- EXECUTION TIME:
0.127509
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
